--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,212 +1,380 @@
-/* Reset y Ajustes Generales */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
+/* Estilos generales */
 body {
     font-family: 'Lato', sans-serif;
-    background-color: #FFFFFF;
-    color: #0A3D62;
-    line-height: 1.6;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
 }
 
-h1, h2 {
-    text-align: center;
-    margin: 20px 0;
-    font-family: 'Roboto Slab', serif;
-}
-
-/* header */
+/* Encabezado */
 .encabezado {
-    padding: 20px;
-    background-color: #F7F9FB;
-    border-bottom: 2px solid #60A3BC;
+    background-image: url(../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp);
+    background-color: #f2f7f6ec;
+    color: white;
+    padding: 5rem;
+    text-align: center;
 }
 
 .textoMarca {
-    font-size: 3rem;
-    color: #0A3D62;
+    font-family: 'Roboto Slab', serif;
+    font-size: 3.5rem;
+    margin: 0;
+    color: rgb(243, 235, 235);
+}
+.subtitulo {
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    font-size: 2.5rem;
+    margin: 0;
+    color: black;
+
 }
 
-/* navbar */
+/* Barra de navegación */
+
 .navbar {
-    background-color: #FFFFFF;
-    padding: 15px;
-    display: flex;
-    justify-content: center;
-    border-bottom: 2px solid #60A3BC;
-    margin-bottom: 10px;
-}
-
-.navbar ul {
-    display: flex;
-    list-style: none;
-}
-
-.navbar li {
-    margin: 0 20px;
+    background-color: #000; /* Fondo negro */
+    padding: 0.5rem;
 }
 
 .navbar a {
-    font-size: 1.25rem;
+    color: white; /* Letras blancas */
     text-decoration: none;
-    color: #0A3D62;
-    font-weight: 700;
-    transition: color 0.3s ease;
+    font-size: 1.2rem;
+    padding: 0.5rem;
 }
 
 .navbar a:hover {
-    color: #3C6382;
+    color: #FFD700; /* Color dorado al pasar el mouse */
+    background-color: rgba(0, 0, 0, 0.2); /* Fondo ligeramente oscuro al pasar */
+    text-decoration: none;
+    transform: scale(1.05);
 }
 
-
-h2 {
-    font-size: 2.5rem;
-    color: #3C6382;
-}
-
-/* Footer */
-.footer {
-    text-align:left;
-    padding: 20px 0;
-    background-color: #FFFFFF;
-    color: #0A3D62;
-    border-top: 2px solid #60A3BC;
-    margin-top: 10px;
-}
-
-/* Formulario*/
-.formulario-contacto {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #F7F9FB;
-    border: 1px solid #60A3BC;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.formulario-contacto label {
-    display: block;
-    margin: 10px 0 5px;
-    color: #3C6382;
-    font-size: 1.1rem;
-}
-
-.formulario-contacto input,
-.formulario-contacto textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #60A3BC;
-    border-radius: 4px;
-    margin-bottom: 15px;
-    font-size: 1rem;
-    color: #0A3D62;
-}
-
-.formulario-contacto .btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    font-size: 1.2rem;
-    font-weight: bold;
-    text-align: center;
-    background-color: #0A3D62;
-    color: #FFFFFF;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.formulario-contacto .btn:hover {
-    background-color: #3C6382;
-}
-
-
-.productos-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-}
-
-.container {
-    max-width: 1200px; 
-    margin: 0 auto; }
-
+/* Tarjetas */
 .card {
-    width: 18rem;
-    border: 1px solid #60A3BC;
+    background-color: #fff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    padding: 10px;
-    margin:  auto
+    overflow: hidden;
+    transition: transform 0.3s ease;
+  
 }
 
-.card img {
-    max-width: 100%;
-    border-radius: 8px 8px 0 0;
+.card:hover {
+    transform: scale(1.05);
+    border:2px solid black;
+   
 }
-
-.card h3 {
-    font-size: 1.5rem;
-    color: #0A3D62;
-    margin-top: 10px;
-}
-
-.card p {
-    font-size: 1rem;
-    color: #3C6382;
-    margin-top: 5px;
-}
-
-
-
-
-.btn {
-    background-color: #0A3D62;
-    color: #FFFFFF;
-    padding: 10px 20px;
-    text-align: center;
-    font-weight: bold;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-    background-color: #3C6382;
-}
-.map-container {
-    justify-content: center;
-    align-items: center;
-    margin: 20px ; 
-    border-radius: 8px;
-    overflow: hidden; 
-}
-
-
-
 
 .card-title {
-    font-size: 1.5rem; /
+    color: black;
+    font-weight: bold;
+    text-align: center;
 }
 
 .card-text {
-    font-size: 1rem; 
+    text-align: center;
+    color: #555;
 }
 
-.btn-celeste {
-    background-color: #00BFFF; 
-    color: #FFFFFF; 
+/* Card styles */
+.contact-card {
+    max-width: 40%;
+    border: 2px solid #00796b;
+    border-radius: 15px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    overflow: hidden;
 }
 
-.btn-celeste:hover {
-    background-color: #1E90FF;
+.contact-card:hover {
+    transform: scale(1.05); 
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
+/* Card body */
+.contact-card .card-body {
+    padding: 1.5rem;
+    background: linear-gradient(135deg, #e0f7fa, #ffffff);
+}
+
+.contact-card .card-title {
+    font-size: 1.5rem;
+    color: #141515; 
+    margin-bottom: 1rem;
+    font-weight: bold;
+}
+
+.contact-card .card-text {
+    font-size: 1rem;
+    color: #555;
+    margin-bottom: 0.5rem;
+}
+
+/* Links */
+.contact-link {
+    color: #161617;
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.contact-link:hover {
+    color: #4155ec; 
+    text-decoration: underline;
+}
+
+
+/* Footer */
+.footer {
+    background-image: url('../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp');
+    background-color: #fff;
+    color: rgb(245, 237, 237);
+    text-align: center;
+    padding: 1rem 0;
+    margin-top: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: large;
+}
+
+
+/* Estilos del formulario */
+.formulario-contacto {
+    max-width: 600px;
+    background: #ffffff;
+    padding: 2rem;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
+}
+
+.formulario-contacto:hover {
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    transform: scale(1.01);
+}
+
+/* Estilo de las etiquetas */
+.formulario-contacto .form-label {
+    font-weight: bold;
+    color: #1d1d1d;
+    margin-bottom: 0.5rem;
+    display: block;
+}
+
+/* Estilo de los campos de entrada */
+.formulario-contacto .form-control {
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    padding: 0.75rem;
+    font-size: 1rem;
+    color: #555;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.formulario-contacto .form-control:focus {
+    border-color: #161717;
+    box-shadow: 0 0 8px rgba(69, 155, 163, 0.4);
+    outline: none;
+}
+
+/* Botón personalizado */
+.btn-custom {
+    background-color: #97bbe9;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    padding: 0.75rem 1rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.btn-custom:hover {
+    background-color: #477ed5;
+    transform: scale(1.05);
+}
+
+/* Tarjetas de reseñas */
+/* Estilo para las tarjetas de reseñas */
+.card-resenas {
+    background: linear-gradient(135deg, #c7e3e9, #ffffff); /* Degradado de celeste a blanco */
+    border: 2px solid #58d3ee; /* Borde celeste */
+    border-radius: 10px; /* Bordes redondeados */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidad */
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transición para el efecto hover */
+    padding: 2rem;
+    margin: 2rem;
+    gap: 2rem;
+    max-width: 400px; /* Tamaño máximo para las tarjetas */
+}
+
+/* Efecto hover */
+.card-resenas:hover {
+    transform: scale(1.05); /* Escala ligeramente la tarjeta */
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
+}
+
+/* Estilo de las estrellas */
+.card-resenas .fa-star {
+    color: #ffd700; /* Estrellas amarillas */
+    font-size: 1.2rem; /* Tamaño de las estrellas */
+}
+
+/* Título y texto */
+.card-resenas .card-title {
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.card-resenas .card-text {
+    font-size: 1rem;
+    margin: 0.5rem 0;
+}
+
+
+
+
+.home {
+    position: relative;
+    background-image: url('../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp'); /* Ruta de la imagen de fondo */
+    background-size: cover;
+    background-position: center;
+    height: 60vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    text-align: center;
+    color: white;
+}
+
+.title-index {
+    position: absolute;
+    top: 10%; 
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2; 
+}
+
+.title-index h1 {
+    font-size: 3rem; 
+    margin-bottom: 1rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.title-index p {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.btn-custom {
+    font-size: 1.2rem;
+    padding: 0.7rem 1.5rem;
+    border: none;
+    background-color: #58d3ee;
+    color: white;
+    border-radius: 5px;
+    text-transform: uppercase;
+    text-decoration: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+    transition: background-color 0.3s ease;
+}
+
+.btn-custom:hover {
+    background-color: #206d7e;
+    transform: scale(1.05); /* Aumentar ligeramente el tamaño */
+}
+
+.table {
+    margin-top: 20px;
+    border-collapse: collapse;
+    width: 100%;
+    font-family: Arial, sans-serif;
+    background-color: #f9f9f9;
+}
+
+.table th, .table td {
+    padding: 12px 15px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+.table th {
+    background-color: #007bff;
+    color: white;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.table-hover tbody tr:hover {
+    background-color: #d6eaf8;
+}
+
+td img{
+width: 40px;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: row;
+        gap: 1rem;
+    }
+
+    .navbar a {
+        color: white; /* Letras blancas */
+        text-decoration: none;
+        font-size: 0.8rem;
+        padding: 0.5rem;
+    } 
+    .btn-custom {
+        font-size: 0.8rem;    /* Reducir el tamaño de la fuente */
+        padding: 0.5rem;   /* Reducir el tamaño del padding */
+    }
+    .title-index {
+        position: absolute;
+        font-size: 0.5rem;
+        top: 2%; 
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 0; 
+    }
+    .title-index h1 {
+        font-size: 2rem; 
+        margin-bottom: 1rem;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+    }
+    .title-index p {
+      display:none;
+    }
+    .textoMarca {
+        font-family: 'Roboto Slab', serif;
+        font-size: 2rem;
+        margin: 0;
+        color: rgb(243, 235, 235);
+    }
+    .contact-card {
+        max-width: 80%;
+        border: 1px solid #00796b;
+        border-radius: 15px; 
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        overflow: hidden;
+    }
+    .formulario-contacto {
+        max-width: 600px;
+        background: #ffffff;
+        padding: 1rem;
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: box-shadow 0.3s ease, transform 0.3s ease;
+    }
+    .btn-custom {
+        font-size: 1rem; /* Reducir tamaño de fuente */
+        padding: 0.5rem 1rem; /* Reducir espaciado interno */
+    }
 }
