--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,15 @@
 /* Estilos generales */
-body {
+html,body {
     font-family: 'Lato', sans-serif;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+}
+main {
+    flex:1
 }
 
 /* Encabezado */
@@ -128,14 +134,15 @@ body {
 
 /* Footer */
 .footer {
-    background-image: url('../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp');
+    background-image:url('../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp');
     background-color: #fff;
     color: rgb(245, 237, 237);
     text-align: center;
     padding: 1rem 0;
-    margin-top: 2rem;
+    
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: large;
+    margin-bottom: 0;
 }
 
 
@@ -242,7 +249,7 @@ body {
     background-image: url('../img/mtb-silhoutte-and-sunset-view-u71g3rhskd70881n.webp'); /* Ruta de la imagen de fondo */
     background-size: cover;
     background-position: center;
-    height: 60vh; 
+    height: 100vh; 
     display: flex;
     align-items: center;
     justify-content: center; 
