--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,6 @@
 /* Estilos generales */
+
+
 html,body {
     font-family: 'Lato', sans-serif;
     background-color: #f5f5f5;
@@ -7,6 +9,7 @@ html,body {
     display: flex;
     height: 100%;
     flex-direction: column;
+    
 }
 main {
     flex:1
@@ -304,7 +307,7 @@ main {
 }
 
 .table th, .table td {
-    padding: 12px 15px;
+    padding: 5px 5px;
     border: 1px solid #ddd;
     text-align: center;
 }
@@ -325,6 +328,27 @@ main {
 td img{
 width: 40px;
 }
+
+.carrito-link {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    display: flex; /* Alinea el ícono y el texto horizontalmente */
+    align-items: center; /* Alinea verticalmente el ícono y el texto */
+    gap: 5px; /* Espacio entre el ícono y el texto */
+}
+
+#carrito-contador {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    font-size: 0.8rem;
+    padding: 2px 5px;
+    border-radius: 50%;
+    color: white;
+    background-color: red;
+}
+
 
 @media (max-width: 768px) {
     .navbar {
@@ -383,5 +407,10 @@ width: 40px;
     .btn-custom {
         font-size: 1rem; /* Reducir tamaño de fuente */
         padding: 0.5rem 1rem; /* Reducir espaciado interno */
+    }
+    .carrito-link {
+        display: flex;
+        align-items: center; /* Alinea el ícono y el texto */
+        gap: 5px; /* Espacio entre el ícono y el texto */
     }
 }
